--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body,input {
     width: 2000px;
     height: 2000px;
     border-radius: 50%;
-    background: linear-gradient(-45deg, #4481eb, #04befe);
+    background: linear-gradient(-45deg, #20a394, #46f1dd);
     top: -10%;
     right: 48%;
     transform: translateY(-50%);
@@ -124,7 +124,7 @@ form.sign-up-form{
     border: none;
     outline: none;
     border-radius: 49px;
-    background-color: #5995fd;
+    background-color: #34c4b3;
     cursor: pointer;
     color: #fff;
     text-transform: uppercase;
@@ -134,7 +134,7 @@ form.sign-up-form{
 }
 
 .btn:hover{
-    background-color: #4d84e2;
+    background-color: #20a394;
 }
 
 .social-text{
@@ -164,8 +164,8 @@ form.sign-up-form{
 }
 
 .social-icon:hover{
-    color: #4481eb;
-    border-color: #4481eb;
+    color: #20a394;
+    border-color: #20a394;
 }
 
 .panels-container{
